// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NotificationInline > styles > should render notification inline with danger styles 1`] = `
.circuit-0 {
  overflow: hidden;
  will-change: height;
  -webkit-transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  padding: 12px 16px;
  border-radius: 8px;
  border: 2px solid var(--cui-border-danger);
}

.circuit-2 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
  color: var(--cui-fg-danger);
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
  padding-left: 16px;
}

<body>
  <div>
    <div
      class="circuit-0"
      style="opacity: 1; height: 0px; visibility: visible;"
    >
      <div
        class="circuit-1"
      >
        <div
          class="circuit-2"
        >
          <svg
            fill="none"
            height="24"
            role="presentation"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.988 1A10.994 10.994 0 1 0 12 1h-.012zm4.71 14.29c.186.19.29.445.29.71a1 1 0 0 1-1 1c-.265 0-.52-.104-.71-.29l-3.29-3.29-3.29 3.29c-.19.186-.444.29-.71.29a1 1 0 0 1-1-1c0-.265.104-.52.29-.71l3.29-3.29-3.29-3.29a1.013 1.013 0 0 1-.29-.71 1 1 0 0 1 1-1c.266 0 .52.104.71.29l3.29 3.29 3.29-3.29c.19-.186.444-.29.71-.29a1 1 0 0 1 1 1c0 .266-.104.52-.29.71L13.408 12l3.29 3.29z"
              fill="currentColor"
            />
          </svg>
        </div>
        <span
          class="circuit-3"
        />
        <div
          class="circuit-4"
        >
          <p
            class="_base_537b83 _one_537b83"
          >
            This is an inline message
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`NotificationInline > styles > should render notification inline with info styles 1`] = `
.circuit-0 {
  overflow: hidden;
  will-change: height;
  -webkit-transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  padding: 12px 16px;
  border-radius: 8px;
  border: 2px solid var(--cui-border-accent);
}

.circuit-2 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
  color: var(--cui-fg-accent);
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
  padding-left: 16px;
}

<body>
  <div>
    <div
      class="circuit-0"
      style="opacity: 1; height: 0px; visibility: visible;"
    >
      <div
        class="circuit-1"
      >
        <div
          class="circuit-2"
        >
          <svg
            fill="none"
            height="24"
            role="presentation"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 22.988a10.994 10.994 0 1 0-.012 0H12zm1-6a1 1 0 0 1-2 0v-5a1 1 0 0 1 2 0v5zm-1-11a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3z"
              fill="currentColor"
            />
          </svg>
        </div>
        <span
          class="circuit-3"
        />
        <div
          class="circuit-4"
        >
          <p
            class="_base_537b83 _one_537b83"
          >
            This is an inline message
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`NotificationInline > styles > should render notification inline with success styles 1`] = `
.circuit-0 {
  overflow: hidden;
  will-change: height;
  -webkit-transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  padding: 12px 16px;
  border-radius: 8px;
  border: 2px solid var(--cui-border-success);
}

.circuit-2 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
  color: var(--cui-fg-success);
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
  padding-left: 16px;
}

<body>
  <div>
    <div
      class="circuit-0"
      style="opacity: 1; height: 0px; visibility: visible;"
    >
      <div
        class="circuit-1"
      >
        <div
          class="circuit-2"
        >
          <svg
            fill="none"
            height="24"
            role="presentation"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M11.988 1A10.994 10.994 0 1 0 12 1h-.012zm5.77 7.64-7 8a1.008 1.008 0 0 1-1.48.07l-3-3a1.013 1.013 0 0 1-.29-.71 1 1 0 0 1 1-1c.266 0 .52.104.71.29l2.22 2.23 6.3-7.16a1 1 0 1 1 1.54 1.28z"
              fill="currentColor"
            />
          </svg>
        </div>
        <span
          class="circuit-3"
        />
        <div
          class="circuit-4"
        >
          <p
            class="_base_537b83 _one_537b83"
          >
            This is an inline message
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`NotificationInline > styles > should render notification inline with warning styles 1`] = `
.circuit-0 {
  overflow: hidden;
  will-change: height;
  -webkit-transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  padding: 12px 16px;
  border-radius: 8px;
  border: 2px solid var(--cui-border-warning);
}

.circuit-2 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
  color: var(--cui-fg-warning);
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
  padding-left: 16px;
}

<body>
  <div>
    <div
      class="circuit-0"
      style="opacity: 1; height: 0px; visibility: visible;"
    >
      <div
        class="circuit-1"
      >
        <div
          class="circuit-2"
        >
          <svg
            fill="none"
            height="24"
            role="presentation"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M14.544 3.481c-1.13-1.975-3.958-1.975-5.088 0L1.398 17.556C.268 19.53 1.681 22 3.942 22h16.116c2.261 0 3.675-2.47 2.544-4.444L14.544 3.48zM11 8a1 1 0 0 1 2 0v5a1 1 0 0 1-2 0V8zm1 11a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <span
          class="circuit-3"
        />
        <div
          class="circuit-4"
        >
          <p
            class="_base_537b83 _one_537b83"
          >
            This is an inline message
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`NotificationInline > styles > should render notification toast with an action button 1`] = `
.circuit-0 {
  overflow: hidden;
  will-change: height;
  -webkit-transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  padding: 12px 16px;
  border-radius: 8px;
  border: 2px solid var(--cui-border-accent);
}

.circuit-2 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
  color: var(--cui-fg-accent);
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
  padding-left: 16px;
}

.circuit-5 {
  font-weight: bold;
  text-decoration-line: underline;
  color: var(--cui-fg-normal);
  margin-top: 8px;
}

.circuit-5:hover {
  color: var(--cui-fg-normal-hovered);
}

.circuit-5:active,
.circuit-5[aria-expanded='true'],
.circuit-5[aria-pressed='true'] {
  color: var(--cui-fg-normal-pressed);
}

<body>
  <div>
    <div
      class="circuit-0"
      style="opacity: 1; height: 0px; visibility: visible;"
    >
      <div
        class="circuit-1"
      >
        <div
          class="circuit-2"
        >
          <svg
            fill="none"
            height="24"
            role="presentation"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 22.988a10.994 10.994 0 1 0-.012 0H12zm1-6a1 1 0 0 1-2 0v-5a1 1 0 0 1 2 0v5zm-1-11a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3z"
              fill="currentColor"
            />
          </svg>
        </div>
        <span
          class="circuit-3"
        />
        <div
          class="circuit-4"
        >
          <p
            class="_base_537b83 _one_537b83"
          >
            This is an inline message
          </p>
          <button
            class="_base_892426 _focus-visible_73b4bb _kilo_892426 _tertiary_892426 circuit-5"
          >
            <span
              class="_base_2b3edd _byte_2b3edd _spinner_892426"
            >
              <span
                class="_hide-visually_73b4bb"
              />
            </span>
            <span
              class="_content_892426"
            >
              Click here
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`NotificationInline > styles > should render with default styles 1`] = `
.circuit-0 {
  overflow: hidden;
  will-change: height;
  -webkit-transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,height 200ms ease-in-out,visibility 200ms ease-in-out;
}

.circuit-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--cui-bg-normal);
  padding: 12px 16px;
  border-radius: 8px;
  border: 2px solid var(--cui-border-accent);
}

.circuit-2 {
  position: relative;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
  color: var(--cui-fg-accent);
}

.circuit-3 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 40px;
  padding-left: 16px;
}

<body>
  <div>
    <div
      class="circuit-0"
      style="opacity: 1; height: 0px; visibility: visible;"
    >
      <div
        class="circuit-1"
      >
        <div
          class="circuit-2"
        >
          <svg
            fill="none"
            height="24"
            role="presentation"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 22.988a10.994 10.994 0 1 0-.012 0H12zm1-6a1 1 0 0 1-2 0v-5a1 1 0 0 1 2 0v5zm-1-11a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3z"
              fill="currentColor"
            />
          </svg>
        </div>
        <span
          class="circuit-3"
        />
        <div
          class="circuit-4"
        >
          <p
            class="_base_537b83 _one_537b83"
          >
            This is an inline message
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;
